@@ -76,6 +76,7 @@ NEWS
   * [core] setrlimit max-fds <= rlim_max for non-root (fixes #2723)
   * [mod_ssi] config ssi.conditional-requests
   * [mod_ssi] config ssi.exec (fixes #2051)
+  * [mod_redirect,mod_rewrite] short-circuit if blank replacement (fixes #2085)
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
